--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <!-- Hero Image with floating cards -->
             <div class="relative max-w-4xl mx-auto" data-aos="zoom-in-up" data-aos-delay="400">
-                <img src="images/hero.png" alt="Dog & Cat" 
+                <img src="public/images/hero.png" alt="Dog & Cat" 
                      class="hero-img w-full rounded-3xl shadow-2xl ring-4 ring-white dark:ring-gray-800">
 
                 <!-- Floating Cat Card -->
@@ -221,7 +221,7 @@
                 <!-- Left Image -->
                 <div class="relative group" data-aos="fade-right" data-aos-duration="1000">
                     <div class="absolute -inset-4 bg-gradient-to-r from-red-500 to-orange-500 rounded-3xl opacity-20 group-hover:opacity-30 blur-2xl transition-opacity"></div>
-                    <img src="images/about.jpg" alt="Our Story" 
+                    <img src="public/images/about.jpg" alt="Our Story" 
                          class="relative rounded-3xl shadow-2xl w-full transform group-hover:scale-[1.02] transition-transform duration-700">
                     
                     <!-- Badge -->
@@ -337,7 +337,7 @@
                 
                 <div class="relative group" data-aos="fade-left">
                     <div class="absolute -inset-4 bg-gradient-to-r from-red-500 to-orange-500 rounded-3xl opacity-20 blur-2xl"></div>
-                    <img src="images/food_dog.jpg" alt="Royal Canin Products" 
+                    <img src="public/images/food_dog.jpg" alt="Royal Canin Products" 
                          class="relative rounded-2xl shadow-2xl w-full transform group-hover:scale-[1.02] transition-transform duration-700">
                 </div>
             </div>
@@ -476,7 +476,7 @@
                 </div>
                 <div class="relative group" data-aos="fade-left">
                     <div class="absolute -inset-4 bg-gradient-to-r from-red-500 to-orange-500 rounded-3xl opacity-20 blur-2xl"></div>
-                    <img src="images/cat1.jpg" alt="Cat Care" 
+                    <img src="public/images/cat1.jpg" alt="Cat Care" 
                          class="relative rounded-2xl shadow-2xl w-full transform group-hover:scale-[1.02] transition-transform duration-700">
                 </div>
             </div>
@@ -576,7 +576,7 @@
 
                     <!-- Testimonial 2 -->
                     <div class="testimonial-card">
-                        <img src="images/user1.jpg" alt="Client" class="avatar">
+                        <img src="public/images/user1.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "My cat's coat is healthier and shinier than ever. I've recommended Royal Canin to all my friends!"
@@ -588,7 +588,7 @@
 
                     <!-- Testimonial 3 -->
                     <div class="testimonial-card">
-                        <img src="images/user3.jpg" alt="Client" class="avatar">
+                        <img src="public/images/user3.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "Scientifically proven formulas we trust daily. My patients always show improvement with Royal Canin."
@@ -600,7 +600,7 @@
 
                     <!-- Testimonial 4 -->
                     <div class="testimonial-card">
-                        <img src="images/user2.jpg" alt="Client" class="avatar">
+                        <img src="public/images/user2.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "The breed-specific formulas are a game-changer. My German Shepherd has never been healthier."
@@ -612,7 +612,7 @@
 
                     <!-- Testimonial 5 -->
                     <div class="testimonial-card">
-                        <img src="images/user4.jpg" alt="Client" class="avatar">
+                        <img src="public/images/user4.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "Exceptional quality and visible results. My clinic exclusively recommends Royal Canin."
@@ -624,7 +624,7 @@
 
                     <!-- Testimonial 6 -->
                     <div class="testimonial-card">
-                        <img src="images/user1.jpg" alt="Client" class="avatar">
+                        <img src="public/images/user1.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "My two cats love the taste and I love the health benefits. Perfect combination!"
@@ -662,10 +662,10 @@
             <div class="grid md:grid-cols-4 gap-8 items-center text-center">
                 <!-- Avatars -->
                 <div class="flex justify-center -space-x-4">
-                    <img src="images/user1.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
-                    <img src="images/user4.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
-                    <img src="images/user3.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
-                    <img src="images/user2.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
+                    <img src="public/images/user1.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
+                    <img src="public/images/user4.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
+                    <img src="public/images/user3.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
+                    <img src="public/images/user2.jpg" alt="Client" class="stat-avatar hover:scale-110 hover:z-10 transition-transform">
                 </div>
 
                 <!-- Stats -->
@@ -920,7 +920,7 @@
                     <!-- Team Member 2 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user3.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user3.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
@@ -933,7 +933,7 @@
                     <!-- Team Member 3 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user1.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user1.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
@@ -946,7 +946,7 @@
                     <!-- Team Member 4 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user2.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user2.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
@@ -959,7 +959,7 @@
                     <!-- Team Member 5 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user3.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user3.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
@@ -972,7 +972,7 @@
                     <!-- Team Member 6 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user1.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user1.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
