--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div id="testimonialSlider" class="flex transition-transform duration-700 ease-out">
                     <!-- Testimonial 1 -->
                     <div class="testimonial-card">
-                        <img src="images/user4.jpg" alt="Client" class="avatar">
+                        <img src="publicimages/user4.jpg" alt="Client" class="avatar">
                         <div class="stars">★★★★★</div>
                         <p class="text-gray-600 dark:text-gray-400 italic mb-6">
                             "Royal Canin improved my dog's health dramatically. The difference in his energy and coat is amazing!"
@@ -907,7 +907,7 @@
                     <!-- Team Member 1 -->
                     <div class="team-card min-w-[calc(25%-1.5rem)] group">
                         <div class="relative overflow-hidden rounded-2xl">
-                            <img src="images/user4.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
+                            <img src="public/images/user4.jpg" alt="Team Member" class="w-full h-80 object-cover group-hover:scale-110 transition-transform duration-700">
                             <div class="absolute inset-0 bg-gradient-to-t from-black/70 to-transparent opacity-0 group-hover:opacity-100 transition-opacity"></div>
                         </div>
                         <div class="team-info mt-4">
@@ -1052,20 +1052,20 @@
                     </div>
 
                     <!-- Social Media -->
-                    <div class="bg-gradient-to-br from-gray-900 to-gray-800 p-8 rounded-2xl text-center">
+                    <div class="bg-gray-200 dark:bg-gray-800 p-8 rounded-2xl text-center">
                         <h4 class="text-xl font-bold text-white mb-6">Follow Our Journey</h4>
                         <div class="flex justify-center gap-6">
                             <a href="#" class="w-12 h-12 bg-white/10 rounded-xl flex items-center justify-center hover:bg-red-500 hover:scale-110 transition-all duration-300 group">
-                                <i data-lucide="facebook" class="w-6 h-6 text-white"></i>
+                                <i  data-lucide="facebook" class="w-6 h-6 text-red-500"></i>
                             </a>
                             <a href="#" class="w-12 h-12 bg-white/10 rounded-xl flex items-center justify-center hover:bg-red-500 hover:scale-110 transition-all duration-300 group">
-                                <i data-lucide="instagram" class="w-6 h-6 text-white"></i>
+                                <i  data-lucide="instagram" class="w-6 h-6 text-red-500"></i>
                             </a>
                             <a href="#" class="w-12 h-12 bg-white/10 rounded-xl flex items-center justify-center hover:bg-red-500 hover:scale-110 transition-all duration-300 group">
-                                <i data-lucide="linkedin" class="w-6 h-6 text-white"></i>
+                                <i  data-lucide="linkedin" class="w-6 h-6 text-red-500"></i>
                             </a>
                             <a href="#" class="w-12 h-12 bg-white/10 rounded-xl flex items-center justify-center hover:bg-red-500 hover:scale-110 transition-all duration-300 group">
-                                <i data-lucide="youtube" class="w-6 h-6 text-white"></i>
+                                <i  data-lucide="youtube" class="w-6 h-6 text-red-500"></i>
                             </a>
                         </div>
                     </div>
@@ -1115,12 +1115,12 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-12">
+    <footer class="bg-gray-200 dark:bg-gray-800 py-12">
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <h3 class="text-2xl font-bold bg-gradient-to-r from-red-500 to-orange-500 bg-clip-text text-transparent mb-4">Royal Canin</h3>
-                    <p class="text-gray-400">Premium nutrition for healthier, happier pets.</p>
+                    <p class="text-gray-80 dark:text-gray-200">Premium nutrition for healthier, happier pets.</p>
                 </div>
                 <div>
                     <h4 class="font-bold mb-4">Quick Links</h4>
@@ -1141,7 +1141,7 @@
                 </div>
                 <div>
                     <h4 class="font-bold mb-4">Newsletter</h4>
-                    <p class="text-gray-400 mb-4">Subscribe for pet care tips</p>
+                    <p class=" mb-4">Subscribe for pet care tips</p>
                     <div class="flex">
                         <input type="email" placeholder="Your email" class="flex-1 px-4 py-2 bg-gray-800 rounded-l-xl focus:outline-none">
                         <button class="px-4 py-2 bg-gradient-to-r from-red-500 to-orange-500 rounded-r-xl hover:opacity-90 transition">
@@ -1150,8 +1150,8 @@
                     </div>
                 </div>
             </div>
-            <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 Royal Canin. All rights reserved.</p>
+            <div class="border-t border-gray-800 mt-12 pt-8 text-center ">
+                <p>&copy; 2026 mamy-source. All rights reserved.</p>
             </div>
         </div>
     </footer>
